<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/signup"
                android:textColor="#323232"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/auth_signUp_logo"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/auth_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_out_et_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30ssp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_signUp_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/_35sdp"
                    android:padding="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_out_et_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30ssp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUp_out_et_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:minHeight="@dimen/_35sdp"
                    android:padding="@dimen/_5sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_out_et_age"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30ssp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUp_out_et_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Age"
                    android:inputType="date"
                    android:minHeight="@dimen/_35sdp"
                    android:padding="@dimen/_5sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_out_et_adress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30ssp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUp_out_et_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_et_adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Adress"
                    android:inputType="text"
                    android:minHeight="@dimen/_35sdp"
                    android:padding="@dimen/_5sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_out_et_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30ssp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:hintTextAppearance="@style/MyHintStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUp_out_et_adress"
                app:passwordToggleDrawable="@drawable/ic_show_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/_35sdp"
                    android:padding="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/signUp_v_separate"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="#D8D8D8"
                app:layout_constraintTop_toBottomOf="@id/signUp_out_et_password" />

            <ImageView
                android:id="@+id/signUp_btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/signin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp_v_separate" />

            <LinearLayout
                android:id="@+id/signUp_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/signUp_btn_signUp"
                app:layout_constraintStart_toStartOf="@id/signUp_btn_signUp"
                app:layout_constraintTop_toBottomOf="@id/signUp_btn_signUp">

                <ImageView
                    android:id="@+id/signup_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_google" />

                <ImageView
                    android:id="@+id/signup_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_facebook" />

                <ImageView
                    android:id="@+id/signup_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_twitter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUp_linear">

                <TextView
                    android:id="@+id/already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/already_have_an_account"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>